# AbdomenCT-1K

./: README.md
1-FullySupervisedLearning/: Dockerfile
2-Semi-supervisedLearning/: Dockerfile
2-Semi-supervisedLearning/nnUNet/nnunet/: paths.py
3-WeaklySupervisedLearning/: Dockerfile
3-WeaklySupervisedLearning/SimpleCRF-master/: MANIFEST.in  README.md
3-WeaklySupervisedLearning/SimpleCRF-master/densecrf_python/: densecrf3d_util.cpp  densecrf3d_util.h  densecrf_core.h  wrap2D_py2.cpp
3-WeaklySupervisedLearning/SimpleCRF-master/dependency/densecrf3d/: CMakeLists.txt  README.txt
3-WeaklySupervisedLearning/SimpleCRF-master/dependency/densecrf3d/src/: densecrf.cpp  pairwise.cpp  permutohedral_couts.cpp
3-WeaklySupervisedLearning/SimpleCRF-master/examples/: demo_densecrf3d.py  demo_maxflow.py
3-WeaklySupervisedLearning/SimpleCRF-master/maxflow_python/: util.cpp  util.h  wrap_py2.cpp  wrap_py3.cpp
4-ContinualLearning/: Dockerfile
ContinualLearning/: README.md
ContinualLearning/nnUNet/nnunet/: configuration.py
FullySupervisedLearning/: README.md
FullySupervisedLearning/nnUNet/nnunet/: configuration.py
Semi-supervisedLearning/: README.md
Semi-supervisedLearning/nnUNet/nnunet/: paths.py
WeaklySupervisedLearning/: README.md
WeaklySupervisedLearning/SimpleCRF-master/: LICENSE  setup.py
WeaklySupervisedLearning/SimpleCRF-master/densecrf_python/: densecrf.cpp  densecrf3d.cpp  densecrf_core.cpp  wrap2D_py3.cpp  wrap3D_py2.cpp  wrap3D_py3.cpp
WeaklySupervisedLearning/SimpleCRF-master/examples/: AbdominalOrganCRFSeg.py  demo_densecrf.py
(+49 files in other folders)
